# pR-t-01

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  ollama.rs
src/components/: ChatWindow.tsx  HistorySidebar.tsx  ImageUpload.tsx  StatusBar.tsx
