[package]
name = "tauri-chat-app"
version = "0.1.0"
description = "A Tauri App for chatting with Ollama"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
